--- a/Downloads/boxcopy 3/app/css/login.css
+++ b/Downloads/boxcopy 3/app/css/login.css
@@ -1,36 +1,132 @@
-body{ font-family: 'Lato', sans-serif;}
-.song-li{
-	box-shadow: 5px 5px 25px 0 rgba(46,61,73,.2);
+#header_logo {
+    color: green;
+    font-size: 32px;
+    line-height: 57px;
+}
+
+#header_logo:hover {
+    color: green;
+    font-size: 32px;
+    line-height: 57px;
+    text-decoration: none;
+}
+
+#external_link {
+    color: green;
+    font-size: 15px;
+    text-decoration: none;
+}
+
+body {
+    font-family: 'Lato', sans-serif;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+.song-li {
+    box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, .2);
     margin-bottom: 14px;
     padding: 2%;
     transition: all .3s ease;
 }
 
-.display_pic img { transition: transform .2s; border: 1px solid #ddd;
+.display_pic img {
+    transition: transform .2s;
+    border: 1px solid #ddd;
     border-radius: 4px;
     padding: 5px;
-    width: 150px;}
-.display_pic img:hover{  transform: scale(1.1);   box-shadow: 5px 5px 25px 0 rgba(46,61,73,.3);
+    width: 150px;
 }
-.song-li:hover{ box-shadow:5px 5px 25px 0 rgba(40,60,70,.9); }
 
-html{ background-color: #ffffff !important;}
-header{ box-shadow: 0 1px 20px 0 rgba(46,61,73,.2);height: 60px;margin-bottom: 20px; }
-.small_display_pic1 img{height: 42px;border-radius: 24px;transition: transform .2s;}
-.small_display_pic2 img{height: 50px;border-radius: 34px;transition: transform .2s;}
-.small_display_pic1 img:hover{transform: scale(1.1); }
-.small_display_pic2 img:hover{transform: scale(1.1); }
-.category { 
-      padding: 4px;
+.display_pic img:hover {
+    transform: scale(1.1);
+    box-shadow: 5px 5px 25px 0 rgba(46, 61, 73, .3);
+}
+
+.song-li:hover {
+    box-shadow: 5px 5px 25px 0 rgba(40, 60, 70, .9);
+}
+
+html {
+    background-color: #ffffff !important;
+}
+
+header {
+    box-shadow: 0 1px 20px 0 rgba(46, 61, 73, .2);
+    height: 60px;
+    margin-bottom: 20px;
+}
+
+.small_display_pic1 img {
+    height: 42px;
+    border-radius: 24px;
+    transition: transform .2s;
+}
+
+.small_display_pic2 img {
+    height: 50px;
+    border-radius: 34px;
+    transition: transform .2s;
+}
+
+.small_display_pic1 img:hover {
+    transform: scale(1.1);
+}
+
+.small_display_pic2 img:hover {
+    transform: scale(1.1);
+}
+
+.category {
+    padding: 4px;
     background-color: green;
-    font-size: 13px;color: #fff;margin-top: 8px;border-radius: 2px;font-family: 'Roboto', sans-serif;}
-.category:hover { 
-      padding: 4px;
+    font-size: 13px;
+    color: #fff;
+    margin-top: 8px;
+    border-radius: 2px;
+    font-family: 'Roboto', sans-serif;
+}
+
+.category:hover {
+    padding: 4px;
     background-color: green;
-    font-size: 13px;color: #fff;margin-top: 8px;border-radius: 2px;text-decoration: none;}
-.no-margin-left { margin-left: 0px;}
-.m-t-2{ margin-top: 2em;}
-.search_input{     height: 37px;
+    font-size: 13px;
+    color: #fff;
+    margin-top: 8px;
+    border-radius: 2px;
+    text-decoration: none;
+}
+
+.no-margin-left {
+    margin-left: 0px;
+}
+
+.m-t-2 {
+    margin-top: 2em;
+}
+
+.m-t-1 {
+    margin-top: 1em;
+}
+
+.search_input {
+    height: 37px;
     margin-top: 6px;
     margin-right: 11px;
-}}
+}
+
+}
+
+
+
+
+
+
+@media only screen and (max-width: 600px) {
+
+    .text-center-sm {
+        text-align: center;
+    }
+}
